# simple-socks5

./: Cargo.toml  README.md
examples/: simple_server.rs
src/: error.rs  lib.rs  main.rs  method.rs  parse.rs  reply.rs  request.rs
src/auth/: mod.rs  reply.rs  request.rs
src/conn/: reply.rs  request.rs
src/msg/: message.rs  method.rs  mod.rs
