[package]
name = "simple_socks5"
version = "0.1.0"
edition = "2024"
authors = ["Rares-Stefan Asaftei <rasaft29@gmail.com>"]
license = "MIT"
repository = "https://github.com/asaft29/SOCKRS5"
readme = "README.md"

[lib]
name = "simple_socks5"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
