[package]
name = "simple_socks5"
version = "0.1.2"
edition = "2024"
authors = ["Rares-Stefan Asaftei <rasaft29@gmail.com>"]
description = "A simple, lightweight and async SOCKS5 proxy server library"
keywords = ["socks5", "proxy", "tokio", "async"]
categories = ["network-programming", "asynchronous"]
license = "MIT"
repository = "https://github.com/asaft29/simple_socks5"
homepage = "https://github.com/asaft29/simple_socks5"
documentation = "https://docs.rs/simple_socks5"
readme = "README.md"

[lib]
name = "simple_socks5"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
